--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.4
-  flutter_bloc: ^8.0.1
-  json_annotation: ^4.4.0
+  flutter_bloc: ^8.1.3
+  json_annotation: ^4.8.1
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
-  build_runner: ^2.1.7
-  flutter_lints: ^1.0.0
+  build_runner: ^2.4.8
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.1.4
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
