--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   flutter_bloc: ^8.1.3
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
+  retrofit: ^3.3.1
+  bloc: ^8.1.2
+  get_it: ^7.6.7
 
 dev_dependencies:
   build_runner: ^2.4.8
@@ -23,6 +26,7 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.4.6
   json_serializable: ^6.7.1
+  retrofit_generator: ^4.2.0
 
 flutter:
   uses-material-design: true
