--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   retrofit: ^3.3.1
   bloc: ^8.1.2
   get_it: ^7.6.7
+  injectable: ^2.3.2
 
 dev_dependencies:
   build_runner: ^2.4.8
@@ -25,6 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.4.6
+  injectable_generator: ^2.4.1
   json_serializable: ^6.7.1
   retrofit_generator: ^4.2.0
 
