--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   injectable: ^2.3.2
 
 dev_dependencies:
+  bloc_test: ^9.1.5
   build_runner: ^2.4.8
   flutter_lints: ^3.0.1
   flutter_test:
@@ -28,6 +29,7 @@ dev_dependencies:
   freezed: ^2.4.6
   injectable_generator: ^2.4.1
   json_serializable: ^6.7.1
+  mocktail: ^1.0.3
   retrofit_generator: ^4.2.0
 
 flutter:
